Added unit tests, and refactored some other classes to stabilize the build